--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -6,3 +6,4 @@ spring.cloud.config.server.git.uri=https://github.com/jfrost1610/capstone-config
 
 # adding provision to clone on start of server instead of first request
 spring.cloud.config.server.git.cloneOnStart=true
+spring.cloud.config.server.git.username=jobinthomas1610@gmail.com
